--- a/DashGame/Assets/Plugins/Android/appodeal/AndroidManifest.xml
+++ b/DashGame/Assets/Plugins/Android/appodeal/AndroidManifest.xml
@@ -147,6 +147,10 @@
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 <uses-permission android:name="android.permission.WAKE_LOCK"/>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission
+     android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+     android:maxSdkVersion="18" />
 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+  <uses-feature android:name="android.hardware.location" android:required="false" />
+  <uses-feature android:name="android.hardware.location.network" android:required="false" />
 </manifest>
